--- a/SDEV2110/SDEV2110.css
+++ b/SDEV2110/SDEV2110.css
@@ -1,3 +1,13 @@
+/* ubuntu-mono-latin-400-normal */
+@font-face {
+    font-family: 'Ubuntu Mono';
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/ubuntu-mono@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/ubuntu-mono@latest/latin-400-normal.woff) format('woff');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 :root {
     --grey1: #c3e0d8;
     --grey2: #768a84;
@@ -21,21 +31,16 @@ body {
     justify-content: center;
     background-color: var(--grey5);
     color: var(--green1);
-    font-family: Inconsolata, monospace;
+    font-family: 'Ubuntu Mono';
 }
 
-
 .title {
-    font-size: 3rem;
-    margin-bottom: 20rem;
+    font-size: 2.5rem;
+    margin: 2rem 4rem 20rem;
 }
 
 .title a {
     font-size: 1.5rem;
-}
-
-.title div {
-    font-size: 2rem;
 }
 
 .description {
@@ -57,7 +62,7 @@ body {
     font-size: 1.75rem;
 }
 
-.projects p {
+.projects h3 {
     font-size: 3rem;
     padding-bottom: 2rem;
     width: 100%;
