--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+/* ubuntu-mono-latin-400-normal */
+@font-face {
+    font-family: 'Ubuntu Mono';
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/ubuntu-mono@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/ubuntu-mono@latest/latin-400-normal.woff) format('woff');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 :root {
     --grey1: #c3e0d8;
     --grey2: #768a84;
@@ -21,27 +31,27 @@ body {
     justify-content: center;
     background-color: var(--grey5);
     color: var(--green1);
-    font-family: Inconsolata, monospace;
+    font-family: 'Ubuntu Mono';
 }
 
 .title {
-    font-size: 8rem;
-    margin-bottom: 20rem;
+    font-size: 6rem;
+    margin: 8rem 4rem;
 }
 
-.edu_container {
-    margin-top: 10rem;
+.section_container {
+    margin: 24rem 0;
 }
 
-.edu_title {
+.section_title {
     color: var(--green2);
     font-size: 4rem;
     padding-bottom: 2rem;
     border-bottom: 2px solid var(--green2);
 }
 
-.course {
-    font-size: 2rem;
+.section_content {
+    font-size: 2.5rem;
     padding: 5rem 8rem 5rem 8rem;
     border-bottom: 2px solid var(--green2);
     text-align: justify;
