--- a/portfolio.css
+++ b/portfolio.css
@@ -14,8 +14,8 @@
     --grey3: #2f3836;
     --grey4: #232b28;
     --grey5: #161717;
-    --green1: #77ed8c;
-    --green2: #53a662;
+    --green1: #8eeb9f;
+    --green2: #70b47d;
     --green3: #28382b;
     --green4: #243127;
     --green5: #2f3b31;
@@ -34,26 +34,84 @@ body {
     font-family: 'Ubuntu Mono';
 }
 
-.title {
+/* Home page */
+
+.main_title {
+    font-size: 6.5rem;
+    margin: 8rem 4rem;
+}
+
+.section_container {
+    margin: 24rem 0;
+}
+
+.section_title {
+    color: var(--green2);
+    font-size: 5rem;
+    padding-bottom: 2rem;
+    border-bottom: 2px solid var(--green2);
+}
+
+.section_content {
     font-size: 2.5rem;
+    padding: 5rem 8rem 5rem 8rem;
+    border-bottom: 2px solid var(--green2);
+    text-align: justify;
+}
+
+@media screen and (max-width: 1000px) {
+    .main_title {
+        font-size: 5rem;
+    }
+
+    .section_title {
+        font-size: 4rem;
+    }
+
+    .section_content {
+        font-size: 1.75rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .main_title {
+        font-size: 4rem;
+    }
+
+    .section_title {
+        font-size: 3rem;
+    }
+
+    .section_content {
+        font-size: 1.25rem;
+    }
+}
+
+/* Pages */
+
+.page_title {
     margin: 2rem 4rem 20rem;
 }
 
-.title a {
+.page_title h1 {
+    font-size: 5.5rem;
+}
+
+.page_title a {
     font-size: 1.5rem;
 }
 
-.description {
+.page_description {
     color: var(--green2);
     font-size: 2rem;
     text-align: left;
     line-height: 1.5;
     max-width: 80rem;
-    margin-left: auto;
-    margin-right: auto;
+    padding-inline: 4rem;
+    margin-inline: auto;
 }
 
-.projects {
+.edu_projects {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,14 +120,14 @@ body {
     font-size: 1.75rem;
 }
 
-.projects h3 {
-    font-size: 3rem;
+.edu_projects h3 {
+    font-size: 4rem;
     padding-bottom: 2rem;
     width: 100%;
     border-bottom: 2px solid var(--grey2);
 }
 
-.projects a {
+.edu_projects a {
     font-size: 2rem;
     margin-top: 10rem;
     padding: 3rem;
@@ -78,11 +136,33 @@ body {
     border: var(--grey2) solid 2px;
 }
 
+@media screen and (max-width: 800px) {
 
+    .page_title {
+        margin: 1rem 1rem 8rem;
+    }
 
+    .page_title h1 {
+        font-size: 4rem;
+    }
 
+    .page_description {
+        font-size: 1.5rem;
+        padding-inline: 1rem;
+    }
 
-/* linksj */
+    .edu_projects h3 {
+        font-size: 2.5rem;
+    }
+
+    .edu_projects a {
+        font-size: 1.5rem;
+        margin-top: 4rem;
+    }
+}
+
+/* Links */
+
 a {
     color: var(--gold2);
     text-decoration: none;
